View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028201 | Open CASCADE | OCCT:Coding | public | 2016-12-08 11:29 | 2017-09-29 16:31 |
Reporter | Assigned To | apn | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.1.0 | ||||
Target Version | 7.2.0 | Fixed in Version | 7.2.0 | ||
Summary | 0028201: Add square PConfusion() method to the Precision class | ||||
Description | Precision class contains three methods: Precision::Confusion() Precision::PConfusion() Precision::SquareConfusion() There is no method for square PConfusion(). | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR28201 has been created by aml. SHA-1: 420355a905c700f71a9944659c63a357969a8995 Detailed log of new commits: Author: aml Date: Fri Dec 9 18:15:58 2016 +0300 0028201: Add square PConfusion() method to the Precision class Method SquarePConfusion has been added to simplify code. |
|
Dear msv, Please check current state of the CR28201 branch. |
|
Reviewed. No need in testing. Only new method has been added, and it is not called yet from anywhere. |
|
Dear BugMaster, Branch CR28201 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms on Release mode. SHA-1: 420355a905c700f71a9944659c63a357969a8995 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 63 (63 on master) Windows: 0 (0 on master) MacOS : 1144 |
|
Dear BugMaster, Branch CR28201 is TESTED. |
|
Branch CR28201 has been deleted by kgv. SHA-1: 420355a905c700f71a9944659c63a357969a8995 |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-12-08 11:29 |
|
New Issue | |
2016-12-08 11:29 |
|
Assigned To | => msv |
2016-12-08 11:31 |
|
Assigned To | msv => aml |
2016-12-08 11:31 |
|
Status | new => assigned |
2016-12-09 18:19 | git | Note Added: 0061540 | |
2016-12-09 18:21 |
|
Note Added: 0061541 | |
2016-12-09 18:21 |
|
Assigned To | aml => msv |
2016-12-09 18:21 |
|
Status | assigned => resolved |
2016-12-09 18:21 |
|
Steps to Reproduce Updated | |
2016-12-09 18:31 |
|
Note Added: 0061543 | |
2016-12-09 18:31 |
|
Assigned To | msv => bugmaster |
2016-12-09 18:31 |
|
Status | resolved => reviewed |
2016-12-09 18:50 |
|
Assigned To | bugmaster => mkv |
2016-12-12 13:04 |
|
Note Added: 0061573 | |
2016-12-12 13:04 |
|
Note Added: 0061574 | |
2016-12-12 13:04 |
|
Assigned To | mkv => bugmaster |
2016-12-12 13:04 |
|
Status | reviewed => tested |
2016-12-12 13:04 |
|
Test case number | => Not needed |
2016-12-16 16:34 | apn | Changeset attached | => occt master dbe54d10 |
2016-12-16 16:34 | apn | Assigned To | bugmaster => apn |
2016-12-16 16:34 | apn | Status | tested => verified |
2016-12-16 16:34 | apn | Resolution | open => fixed |
2016-12-18 10:53 | git | Note Added: 0061814 | |
2017-09-29 16:21 |
|
Fixed in Version | => 7.2.0 |
2017-09-29 16:31 |
|
Status | verified => closed |