0028201: Add square PConfusion() method to the Precision class

Method SquarePConfusion has been added to simplify code.